--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        function deletePost(){
+
+        }
+    </script>
+    
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
 </head>
 <body>
     <h1>Create New Blog Post</h1>
+
     <form action="/submit" method="POST">
-        <input type="text" name="authorName" placeholder="Author Name">
-        <input type="text" name="blogTitle" placeholder="Blog Title">
-        <input type="text" name="content" placeholder="Blog Content">
+        <input type="text" name="authorName" placeholder="Author Name" required>
+        <input type="text" name="blogTitle" placeholder="Blog Title" required>
+        <input type="text" name="content" placeholder="Blog Content" required>
         <input type="submit" value="Create Post">
     </form>
+
     <% if (locals.blogPosts){ %>
         <% for (var index = 0; index < blogPosts.length; index++) { %>
+
         <h1>Author: <%=blogPosts[index].authorName%><br>
             Title: <%=blogPosts[index].blogTitle%><br>
             Created On: <%=blogPosts[index].creationTime%><br>
             Blog: <%=blogPosts[index].content%>
         </h1>
+
+        <form action="/delete" method="POST" style="display:inline;">
+            <input type="hidden" name="index" value="<%= index %>">
+            <button type="submit">Delete</button>
+        </form>
+
+        <form action="/edit" method="POST" style="display:inline;">
+            <input type="hidden" name="index" value="<%= index %>">
+            <button type="submit">Edit</button>
+        </form>
+
+
+
         <% }; %>
     <% } %>
 </body>
 </html>
+
+
