--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,17 @@
-<form action="/update" method="POST">
-    <input type="hidden" name="id" value="<%= listIndex %>">
-    <input type="text" name="authorName" value="<%=blogPost.authorName%>">
-    <input type="text" name="blogTitle" value="<%=blogPost.blogTitle%>">
-    <input type="text" name="content" value="<%=blogPost.content%>">
-    <input type="submit" value="Submit Edit">
-</form>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CS-312-MiniProject-1</title>
+</head>
+
+<body>
+    <form action="/update" method="POST">
+        <input type="hidden" name="id" value="<%= listIndex %>">
+        <input type="text" name="authorName" value="<%=blogPost.authorName%>">
+        <input type="text" name="blogTitle" value="<%=blogPost.blogTitle%>">
+        <input type="text" name="content" value="<%=blogPost.content%>">
+        <input type="submit" value="Submit Edit">
+    </form>
+</body>
+
+
