--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,36 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS-312-MiniProject-1</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Create New Blog Post</h1>
+    <h1 class="title">Create New Blog Post</h1>
 
-    <form action="/submit" method="POST">
+    <form class="postForm" action="/submit" method="POST">
         <input type="text" name="authorName" placeholder="Author Name" required>
         <input type="text" name="blogTitle" placeholder="Blog Title" required>
         <input type="text" name="content" placeholder="Blog Content" required>
-        <input type="submit" value="Create Post">
+        <input class="submit" type="submit" value="Create Post">
     </form>
 
     <% if (locals.blogPosts){ %>
         <% for (var index = 0; index < blogPosts.length; index++) { %>
+        <div class="blogPost">
+            <h1>
+                Author: <%=blogPosts[index].authorName%><br>
+                Title: <%=blogPosts[index].blogTitle%><br>
+                Created On: <%=blogPosts[index].creationTime%><br>
+                Blog: <%=blogPosts[index].content%>
+            </h1>
 
-        <h1>
-            Author: <%=blogPosts[index].authorName%><br>
-            Title: <%=blogPosts[index].blogTitle%><br>
-            Created On: <%=blogPosts[index].creationTime%><br>
-            Blog: <%=blogPosts[index].content%>
-        </h1>
+            <form action="/delete" method="POST" style="display:inline;">
+                <input type="hidden" name="index" value="<%= index %>">
+                <button class="deleteButton" type="submit">Delete</button>
+            </form>
 
-        <form action="/delete" method="POST" style="display:inline;">
-            <input type="hidden" name="index" value="<%= index %>">
-            <button type="submit">Delete</button>
-        </form>
-
-        <form action="/edit" method="POST" style="display:inline;">
-            <input type="hidden" name="index" value="<%= index %>">
-            <button type="submit">Edit</button>
-        </form>
+            <form action="/edit" method="POST" style="display:inline;">
+                <input type="hidden" name="index" value="<%= index %>">
+                <button class="editButton" type="submit">Edit</button>
+            </form>
+        </div>
 
         <% }; %>
     <% } %>
